Working on UserModule APIs
