# api/user.go
@@ -7,12 +7,61 @@ import (
 	"net/http"
 )
 
+// changePassword godoc
+// @Summary Change Password of the user
+// @Description To Change Password by existing user
+// @Tags User Module
+// @Produce json
+// @Success 200 {object} StatusInfoResponse
+// @Param       json  body ChangePasswordInput true "It takes json as input"
+// @Failure      400  string Bad Request
+// @Failure      404  string Page Not found
+// @Failure      500  string Internal Server Error
+// @Router /changePassword [post]
+func changePassword(c *gin.Context) {
+	var changePasswordInput ChangePasswordInput
+	if err := c.ShouldBindJSON(&changePasswordInput); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"data": err.Error()})
+		return
+	}
+	var statusInfo StatusInfoResponse
+	_, err := database.GetUserByEmailAndPasswordHash(changePasswordInput.Email, changePasswordInput.OldPassword)
+	if err != nil {
+		statusInfo = StatusInfoResponse{Msg: "Email or Password is incorrect", Code: http.StatusAccepted, Status: false}
+		c.JSON(http.StatusAccepted, gin.H{"data": statusInfo})
+	}
+	err = database.UpdatePasswordByEmail(changePasswordInput.Email, changePasswordInput.NewPassword)
+	if err != nil {
+		statusInfo = StatusInfoResponse{Msg: "Password is not updated", Code: http.StatusAccepted, Status: false}
+		c.JSON(http.StatusAccepted, gin.H{"data": statusInfo})
+	} else {
+		statusInfo = StatusInfoResponse{Msg: "Password is updated", Code: http.StatusAccepted, Status: true}
+		c.JSON(http.StatusOK, gin.H{"data": statusInfo})
+	}
+}
+
+// forgotPassword godoc
+// @Summary Forgot Password
+// @Description To retrieve the password
+// @Tags User Module
+// @Accept json
+// @Produce json
+// @Success 200 {object} database.User
+// @Param       json  body ForgotPasswordInput true "It takes json as input"
+// @Failure      400  string Bad Request
+// @Failure      404  string Page Not found
+// @Failure      500  string Internal Server Error
+// @Router /forgotPassword [post]
+func forgotPassword(c *gin.Context) {
+
+}
+
 // isUserExist godoc
 // @Summary To check whether Email already registered with any User or not.
 // @Description To check if user exists or not
 // @Tags User Module
 // @Produce json
-// @Success 200 {object} EmailCheck
+// @Success 200 {object} EmailExistResponse
 // @Param       json  body EmailInput true "It takes email as input"
 // @Failure      400  string Bad Request
 // @Failure      404  string Page Not found
@@ -24,22 +73,43 @@ func isUserExist(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
+	var emailExist EmailExistResponse
 	isExist, err := database.IsUserExist(emailInput.Email)
 	if err != nil {
+		emailExist = EmailExistResponse{Email: emailInput.Email, Msg: err.Error(), IsExist: isExist, Code: http.StatusBadRequest}
+	} else {
+		emailExist = EmailExistResponse{Email: emailInput.Email, Msg: "Email is available to create new account.", IsExist: isExist, Code: http.StatusOK}
+	}
+	c.JSON(http.StatusOK, gin.H{"data": emailExist})
+}
+
+// signIn godoc
+// @Summary Sign In user
+// @Description To login by existing user
+// @Tags User Module
+// @Produce json
+// @Success 200 {object} database.User
+// @Param       json  body EmailPassword true "It takes json as input"
+// @Failure      400  string Bad Request
+// @Failure      404  string Page Not found
+// @Failure      500  string Internal Server Error
+// @Router /signIn [post]
+func signIn(c *gin.Context) {
+	var userReq EmailPassword
+	if err := c.ShouldBindJSON(&userReq); err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		return
 	}
-	if isExist {
-		c.JSON(http.StatusOK, gin.H{"data": "User Exist"})
-		return
+	user, err := database.GetUserByEmailAndPasswordHash(userReq.Email, userReq.Password)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Email or Password is incorrect"})
 	} else {
-		c.JSON(http.StatusOK, gin.H{"data": "User Not Exist"})
-		return
+		c.JSON(http.StatusBadRequest, gin.H{"data": user})
 	}
 }
 
 // signUp godoc
-// @Summary Signup user
+// @Summary Sign Up by User
 // @Description To create a new user
 // @Tags User Module
 // @Produce json
@@ -63,34 +133,21 @@ func signUp(c *gin.Context) {
 	}
 }
 
-// signIn godoc
-// @Summary Signup user
-// @Description To create a new user
-// @Tags User Module
-// @Produce json
-// @Success 200 {object} database.User
-// @Param       json  body EmailPassword true "It takes json as input"
-// @Failure      400  string Bad Request
-// @Failure      404  string Page Not found
-// @Failure      500  string Internal Server Error
-// @Router /signIn [post]
-func signIn(c *gin.Context) {
-	var userReq EmailPassword
-	if err := c.ShouldBindJSON(&userReq); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	user, err := database.GetUserByEmailAndPasswordHash(userReq.Email, userReq.Password)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"data": user})
-	} else {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Email or Password is incorrect"})
-	}
+type ChangePasswordInput struct {
+	Email       string `json:"email,omitempty"`
+	OldPassword string `json:"oldPassword,omitempty"`
+	NewPassword string `json:"newPassword,omitempty"`
 }
 
-type EmailCheck struct {
+type ForgotPasswordInput struct {
 	Email string `json:"email,omitempty"`
-	Msg   string `json:"msg,omitempty"`
+}
+
+type EmailExistResponse struct {
+	Email   string `json:"email,omitempty"`
+	Msg     string `json:"msg,omitempty"`
+	IsExist bool   `json:"isExist,omitempty"`
+	Code    int    `json:"code,omitempty"`
 }
 
 type EmailInput struct {
@@ -100,4 +157,10 @@ type EmailInput struct {
 type EmailPassword struct {
 	Email    string `json:"email,omitempty"`
 	Password string `json:"password,omitempty"`
+}
+
+type StatusInfoResponse struct {
+	Msg    string `json:"msg,omitempty"`
+	Code   int    `json:"code,omitempty"`
+	Status bool   `json:"status,omitempty"`
 }
