# docs/swagger/swagger.json
@@ -21,6 +21,107 @@
     "host": "0.0.0.0:8080",
     "basePath": "/",
     "paths": {
+        "/changePassword": {
+            "post": {
+                "description": "To Change Password by existing user",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Module"
+                ],
+                "summary": "Change Password of the user",
+                "parameters": [
+                    {
+                        "description": "It takes json as input",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.ChangePasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/forgotPassword": {
+            "post": {
+                "description": "To retrieve the password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User Module"
+                ],
+                "summary": "Forgot Password",
+                "parameters": [
+                    {
+                        "description": "It takes json as input",
+                        "name": "json",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.ForgotPasswordInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/isUserExist": {
             "post": {
                 "description": "To check if user exists or not",
@@ -46,7 +147,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.EmailCheck"
+                            "$ref": "#/definitions/api.EmailExistResponse"
                         }
                     },
                     "400": {
@@ -72,14 +173,14 @@
         },
         "/signIn": {
             "post": {
-                "description": "To create a new user",
+                "description": "To login by existing user",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "User Module"
                 ],
-                "summary": "Signup user",
+                "summary": "Sign In user",
                 "parameters": [
                     {
                         "description": "It takes json as input",
@@ -128,7 +229,7 @@
                 "tags": [
                     "User Module"
                 ],
-                "summary": "Signup user",
+                "summary": "Sign Up by User",
                 "parameters": [
                     {
                         "description": "It takes json as input",
@@ -170,11 +271,31 @@
         }
     },
     "definitions": {
-        "api.EmailCheck": {
+        "api.ChangePasswordInput": {
             "type": "object",
             "properties": {
                 "email": {
                     "type": "string"
+                },
+                "newPassword": {
+                    "type": "string"
+                },
+                "oldPassword": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.EmailExistResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "isExist": {
+                    "type": "boolean"
                 },
                 "msg": {
                     "type": "string"
@@ -196,6 +317,14 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.ForgotPasswordInput": {
+            "type": "object",
+            "properties": {
+                "email": {
                     "type": "string"
                 }
             }
